Cambios varios (mejorando la salida de la app).

--- a/AppTFG/AppTFG/AppShell.xaml
+++ b/AppTFG/AppTFG/AppShell.xaml
@@ -91,5 +91,5 @@
         <ShellContent Title="Actividades" Icon="baseline_local_play_white_24.png" Route="Actividades" ContentTemplate="{DataTemplate local:ListaActividades}"/>
     </FlyoutItem>
     <ShellContent Title="Ajustes" Icon="baseline_settings_white_24.png" Route="Ajustes" ContentTemplate="{DataTemplate local:Ajustes}" />
-    <ShellContent Title="Cerrar sesión" Icon="baseline_logout_white_24.png" ContentTemplate="{DataTemplate local:LoginPage}" />
+    <MenuItem Text="Cerrar sesión" Icon="baseline_logout_white_24.png" Clicked="MenuItem_Clicked"/>
 </Shell>
